# rs-waiter

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  waiter.rs
tests/: test.rs
